--- a/style.css
+++ b/style.css
@@ -3,4 +3,141 @@
     padding: 0px;
     box-sizing: border-box;
 }
-/**font cdn link**/
+
+
+/**share classes**/
+:root{
+    --dark:#000000;
+    --dark-1: #252432;
+    --gray-1:#8987A1;
+    --gray-2:rgba(0, 0, 0, 0.5);
+    --orange:#E95A08;
+    --white:#fff;
+
+}
+.common-fonts-paragraph{
+    font-size: 1.375rem;
+    font-family: "Inter", sans-serif;
+    color: var(--gray-2);
+}
+.btn{
+    padding: 19px 80px;
+    background-color: var(--orange);
+    font-size: 1rem;
+    color: var(--white);
+    background-color: var(--orange);
+}
+
+.noto-serif-font{
+  font-family: "Noto Serif", serif;
+}
+
+.inter-font {
+  font-family: "Inter", sans-serif;
+}
+.container{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+.display-flex{
+    display: flex;
+    align-items: center;
+}
+.fresh-flowers{
+    color: var(--orange);
+}
+.fresh-flowers-plants-title{
+    font-size: 3.125rem;
+    font-weight: 700;
+    font-family: "Noto Serif", serif;
+}
+.fresh-flowers-plants{
+    color: var(--orange);
+}
+
+
+
+
+/**header section style**/
+/**navbar style**/
+.header-content{
+   margin: 30px auto 109px;
+}
+.logo-section img{
+    height: 82px;
+}
+.nav-bar{
+    justify-content: space-between;
+}
+.nav-items-section{
+    padding: 18px 0;
+}
+.nav-items-section ul {
+    gap: 48px;
+}
+.nav-items-section ul li{
+    list-style: none;
+}
+.nav-items-section ul li a{
+    text-decoration: none;
+    color: var(--gray-1);
+}
+#home-active{
+    color: var(--dark-1);
+    font-weight: 700;
+}
+.cart{
+    gap:10px;
+}
+.cart p{
+    font-size: 1rem;
+    color: var(--dark);
+}
+
+/**main container style**/
+
+
+/**hero section style**/
+.hero-content{
+    justify-content: space-between;
+    align-items: flex-end;
+}
+.left-hero-section{
+    flex: 1;
+}
+.left-hero-section h1{
+    font-size: 4.0625rem;
+    color: var(--dark);
+    font-weight: 700;
+}
+ 
+.fresh-flowers{
+    color: var(--orange);
+}
+.left-hero-section p{
+    margin-top: 13px;
+}
+.right-hero-img{
+    flex: 1;
+    padding-top: 106px;
+}
+.right-hero-img img{
+    display: block;
+}
+
+/**plant section style**/
+.plants-content{
+    height: 500px;
+    background-color: green;
+}
+.plants-header-section{
+    justify-content: center;
+    flex-direction: column;
+    gap: 16px;
+}
+.plants-description{
+    max-width: 888px;
+    text-align: center;
+}
+
+
