--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 /**share classes**/
 :root{
     --dark:#000000;
+    --normal-dark:#111111;
     --dark-1: #252432;
     --gray-1:#8987A1;
     --gray-2:rgba(0, 0, 0, 0.5);
@@ -127,8 +128,9 @@
 
 /**plant section style**/
 .plants-content{
-    height: 500px;
-    background-color: green;
+    flex-direction: column;
+    gap: 49px;
+    margin-top: 120px;
 }
 .plants-header-section{
     justify-content: center;
@@ -139,5 +141,37 @@
     max-width: 888px;
     text-align: center;
 }
+.card-content{
+    text-align: center;
+    padding-top: 30px;
+}
+.card-img img{
+    display: block;
+}
+.card-container {
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    row-gap: 30px;
+    column-gap: 20px;
+}
+.card{
+    width: 270px;
+}
+.card-content p{
+    padding-bottom: 10px;
+    font-size: 1.375rem;
+    color: var(--normal-dark);
+}
+.card-content strong{
+    font-weight: 700;
+    font-size: 1.375rem;
+    color: var(--normal-dark);
+}
+.card-content button{
+    border: none;
+    width: 100%;
+    margin-top: 25px;
+}
+
 
 
