--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
     --gray-2:rgba(0, 0, 0, 0.5);
     --orange:#E95A08;
     --white:#fff;
+    --overlay:#C8C8C8;
 
 }
 .common-fonts-paragraph{
@@ -132,6 +133,9 @@
     gap: 49px;
     margin-top: 120px;
 }
+.plant-section{
+    margin-bottom: 210.13px;
+}
 .plants-header-section{
     justify-content: center;
     flex-direction: column;
@@ -174,4 +178,130 @@
 }
 
 
+/**badge section **/
+.badge-content{
+    gap: 60px;
+}
+.badge-img-section{
+    position: relative;
+}
+.badge{
+    width: 286px;
+    height: 286px;
+    position: absolute;
+    top: -127px;
+    right: -93px;
+}
+.badge img{
+    width: 100%;
+    height: 100%;
+}
+.flower-lover-content{
+    max-width: 540px;
+}
+.flower-lover-content ul{
+    margin: 25px;
+    gap: 20px;
+    flex-direction: column;
+}
+
+/**Latest  Deals style**/
+.latest-deals-content{
+    text-align: center;
+}
+.latest-deals-content h2{
+    padding: 0px 0px 20px;
+}
+.latest-deals{
+    margin: 133px 0px 120px;
+}
+
+/** discount section style**/
+.discount-content{
+    display: grid;
+    row-gap: 25px;
+    column-gap: 28px;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows:  repeat(2,201px);
+}
+.grid-item-1, .grid-item-2, .grid-item-3 {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+.grid-item-1{
+    background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('./assets/deal-bloom.png');
+    border-radius: 14px;
+}
+.grid-item-2{
+    background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('./assets/deal-zabo.png');
+    padding: 65px 48px;
+    border-radius: 22px;
+}
+.grid-item-3{
+    background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('./assets/deal-ana.png');
+    border-radius: 14px;
+}
+.grid-item:nth-child(2){
+    grid-column-start: 2;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 3;
+}
+.content a{
+    text-decoration: underline;
+    color: var(--white);
+}
+.cta{
+    padding: 15px 66px;
+}
+.content{
+    color: var(--white);
+}
+.content p{
+    font-size: 1.25rem;
+}
+.grid-item-2 .content p{
+    font-size: 2.5rem;
+    font-weight: 700;
+}
+
+/**bunch section **/
+.bunch-section{
+    margin-top: 120px;
+}
+.bunch-content{
+    width: 100%;
+    height: 533px;
+    background-image: url(./assets/news-letter-bg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 23px;
+}
+#email{
+    padding: 15.5px 20px 15.5px;
+    flex: 1;
+    outline: none;
+    border: none;
+    background-color: var(--white);
+    color: var(--dark-1);
+
+}
+.input-field{
+  width: 830px;
+  display: flex;
+}
+.input-field .btn{
+    border: none;
+}
+.bunch-content h2{
+    color: var(--white);
+}
 
