discount section responsive complete

--- a/style.css
+++ b/style.css
@@ -10,11 +10,13 @@
     --dark:#000000;
     --normal-dark:#111111;
     --dark-1: #252432;
+    --grey:#6B7280;
     --gray-1:#8987A1;
     --gray-2:rgba(0, 0, 0, 0.5);
     --orange:#E95A08;
     --white:#fff;
     --overlay:#C8C8C8;
+    --icon-ln-bg:#2489BE;
 
 }
 .common-fonts-paragraph{
@@ -276,6 +278,7 @@
 }
 .bunch-content{
     width: 100%;
+    /* margin: auto; */
     height: 533px;
     background-image: url(./assets/news-letter-bg.png);
     background-repeat: no-repeat;
@@ -305,3 +308,106 @@
     color: var(--white);
 }
 
+/**footer content**/
+footer{
+    width: 100%;
+    background-color: var(--white);
+}
+.footer-content{
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 50px 0px;
+}
+.include{
+    margin-top: 16px;
+}
+.footer-logo{
+    width: 359px;
+}
+.page-link ul, .privacy-policy ul{
+    align-items: flex-start;
+    flex-direction: column;
+    gap: 32px;
+}
+.page-link ul li, .privacy-policy ul li{
+    list-style: none;
+}
+.page-link ul li a, .privacy-policy ul li a{
+    text-decoration: none;
+    color: var(--grey);
+}
+.social-media a{
+    text-decoration: none;
+}
+.social-media{
+    gap: 24px;
+}
+@media only screen and (max-width: 576px) {
+.main-section{
+    max-width: 576px;
+    background-color: red;
+}
+/**Latest  Deals responsive**/
+.latest-deals-content{
+    text-align: center;
+}
+.latest-deals-content h2{
+    padding: 0px 0px 20px;
+}
+.latest-deals{
+    margin: 133px 0px 120px;
+}
+
+/**discount section responsive**/
+ .discount-content {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        margin:0px 16px;
+    }
+
+    .grid-item:nth-child(2) {
+        grid-column: auto;
+        grid-row: auto;
+        order: 3; /* Move it to the end */
+    }
+
+    .grid-item {
+        height: 201px;
+    }
+
+    .grid-item-2 {
+        padding: 40px 24px;
+    }
+
+    .grid-item-2 .content p {
+        font-size: 1.75rem;
+    }
+/**bunch responsive **/
+.bunch-section{
+    margin-top: 44px;
+}
+/* .bunch-content{
+    width: 576px;
+    height: 275px;
+    justify-content: center;
+} */
+ .input-field .btn{
+    padding: 19px 12px;
+}
+.input-field{
+  width: 321px;
+}
+.bunch-content h2{
+    font-size: 1.25rem;
+    font-weight: 700;
+}
+    /**footer responsive**/
+.footer-content{
+    flex-direction: column;
+    gap: 20px;
+    margin: 0 20px;
+}
+.include{
+    font-size: 1rem;
+}
+}
