--- a/style.css
+++ b/style.css
@@ -343,78 +343,15 @@ footer{
     gap: 24px;
 }
 @media only screen and (max-width: 576px) {
-.main-section{
-    max-width: 576px;
-    background-color: red;
-}
 
-/**badge section responsive**/
-.badge-content{
-    gap: 60px;
-    flex-direction: column;
+    
+/**navbar style**/
+.header-content{
+    /* max-width: 544px; */
+   margin: 13px 16px 28px;
+   background-color: aqua;
 }
-.badge{
+.nav-items-section li{
     display: none;
-}
-
-/**Latest  Deals responsive**/
-.latest-deals-content{
-    padding: 0px 20px;
-}
-.latest-deals{
-    margin: 143px 0px 51px;
-}
-
-/**discount section responsive**/
- .discount-content {
-        grid-template-columns: 1fr;
-        grid-template-rows: auto;
-        margin:0px 16px;
-    }
-
-    .grid-item:nth-child(2) {
-        grid-column: auto;
-        grid-row: auto;
-        order: 3; /* Move it to the end */
-    }
-
-    .grid-item {
-        height: 201px;
-    }
-
-    .grid-item-2 {
-        padding: 40px 24px;
-    }
-
-    .grid-item-2 .content p {
-        font-size: 1.75rem;
-    }
-/**bunch responsive **/
-.bunch-section{
-    margin-top: 44px;
-}
-/* .bunch-content{
-    width: 576px;
-    height: 275px;
-    justify-content: center;
-} */
- .input-field .btn{
-    padding: 19px 12px;
-}
-.input-field{
-  width: 321px;
-}
-.bunch-content h2{
-    font-size: 1.25rem;
-    font-weight: 700;
-}
-    /**footer responsive**/
-.footer-content{
-    flex-direction: column;
-    gap: 20px;
-    margin: 0 20px;
-}
-.include{
-    font-size: 1rem;
-}
+}    
 }
