--- a/style.css
+++ b/style.css
@@ -24,13 +24,6 @@
     font-family: "Inter", sans-serif;
     color: var(--gray-2);
 }
-.btn{
-    padding: 19px 80px;
-    background-color: var(--orange);
-    font-size: 1rem;
-    color: var(--white);
-    background-color: var(--orange);
-}
 
 .noto-serif-font{
   font-family: "Noto Serif", serif;
@@ -57,6 +50,32 @@
 }
 .fresh-flowers-plants{
     color: var(--orange);
+}
+.btn{
+   padding: 19px 80px;
+   background-color: var(--orange);
+   font-size: 1rem;
+   color: var(--white);
+   background-color: var(--orange);
+   position: relative;
+   cursor: pointer;
+   overflow: hidden;
+   z-index: 1;
+}
+.btn::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background-color: #e77634;
+  z-index: -1;
+  transition: left 1s ease;
+}
+
+.btn:hover::before {
+  left: 0;
 }
 
 
@@ -181,6 +200,19 @@
 
 
 /**badge section **/
+.spinner {    
+  animation: spin 2s ease-out infinite;
+}
+
+@keyframes spin {
+  0% { 
+    transform: rotate(0deg);
+ }
+  100% { 
+    transform: rotate(360deg); 
+}
+}
+
 .badge-content{
     gap: 60px;
 }
@@ -256,6 +288,7 @@
 }
 .content a{
     text-decoration: underline;
+    text-underline-offset: 6px;
     color: var(--white);
 }
 .cta{
@@ -342,6 +375,162 @@ footer{
 .social-media{
     gap: 24px;
 }
+
+@media only screen and (max-width: 576px){
+/**navbar style**/
+.logo-section img{
+    width: 63px;
+    height: 38px;
+}
+.header-content{
+   margin: 13px 16px 28px;
+}
+.nav-items-section li{
+    display: none;
+}
+/**hero section responsive**/
+.hero-content{
+    flex-direction: column-reverse;
+}
+.left-hero-section{
+    padding: 28px 16px 16px;
+}
+.left-hero-section h1{
+    font-size: 1.5rem;
+}
+.left-hero-section p{
+    font-size: 0.875rem;
+}
+.right-hero-img{
+    padding-top: 0px;
+}  
+.right-hero-img img{
+    width: 100%;
+    display: block;
+}
+/**plant section responsive**/
+.plants-content{
+    gap: 28px;
+    margin: 65px 16px 0px;
+}
+.card-container {
+    grid-template-columns: repeat(2, 1fr);
+    place-items: center;
+    row-gap: 28.5px;
+    column-gap: 20px;
+    margin: 0px 16px 41px;
+    width: 100%;
+}
+.card-img img{
+    width: 100%;
+}
+.card-content p{
+    font-size: 1rem;
+}
+.card-content button{
+    padding: 19px 0;
+}
+.card {
+    width: 100%;
+    max-width: 262px;
+}
+.plant-section{
+    margin-bottom: 41.5px;
+}
+.plants-header-section p{
+    font-size: 0.875rem;
+} 
+/**badge section responsive **/
+.badge-content{
+    gap: 18px;
+    flex-direction: column; 
+    margin: 0px 16px 143px; 
+}
+.badge{
+    display: none;
+}
+.flower-store img{
+    width: 100%;
+}
+.flower-lover-content h2{
+    font-size: 1.5rem;
+}
+.flower-lover-content ul li{
+    font-size: 0.875rem;
+    margin: 0;
+}
+/**Latest  Deals responsive**/
+.latest-deals-content{
+    padding: 16px;
+}
+.latest-deals-content h2{
+    font-size: 1.5rem;
+}
+.latest-deals-content p{
+    font-size: 0.875rem;
+}
+.latest-deals{
+    margin-bottom: 51.5px;
+}
+/**discount section responsive**/
+ .discount-content {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    margin: 45px 16px 40px;
+}
+.grid-item:nth-child(2) {
+    grid-column: auto;
+    grid-row: auto;
+    order: 3;
+}
+.grid-item {
+    height: 184px;
+}
+.grid-item-2 {
+    padding: 40px 24px;
+}
+.grid-item-2 .content p {
+    font-size: 1.75rem;
+}
+.grid-item-2 .content p{
+    font-size: 1.25rem;
+}
+/**bunch section **/
+.bunch-section{
+    margin-top: 0px;
+}
+.bunch-content{
+    max-width: 100%;
+    height: 276px;
+}
+.input-field{
+  width: 321px;
+}
+.input-field .btn{
+    padding: 19px 12px;
+}
+.bunch-content h2{
+    font-size: 1.25rem;
+    font-weight: 700;
+}
+/**footer content responsive**/
+.footer-content{
+    flex-direction: column;
+    padding: 50px 20px;
+    gap: 20px;
+}
+.include{
+    font-size: 1rem;
+}
+.footer-logo{
+    width: 100%;
+}
+.footer-logo .img img{
+    width: 180px;
+    height: 109px;
+}
+}
+
 @media only screen and (max-width: 393px) {
 /**navbar style**/
 .logo-section img{
